--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,7 +11,8 @@ license = "MIT"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.28"
 js-sys = "0.3.55"
 rapier2d = { version = "0.11", features = [ "simd-stable" ] }
