--- a/www/package.json
+++ b/www/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "node-watch": "^0.7.2",
     "schema-utils": "^4.0.0",
+    "string-replace-loader": "^3.1.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
