--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -22,8 +22,13 @@ bevy_webgl2 = "0.5"
 benimator = "0.3.1"
 lazy_static = "1.4.0"
 derive_more = "0.99.17"
-stdweb = "0.4.20"
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
 
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  'HtmlCanvasElement',
+  'Window',
+]
