--- a/console/Cargo.toml
+++ b/console/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
 bevy_egui = {git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main"}
-# egui = "0.15.0"
+derive_more = "0.99"
 
