Added sprites; Added camera zooming

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
 console = {path = "../console"}
+derive_more = "0.99"
 # bevy = {git = "https://github.com/bevyengine/bevy", rev = "de8edd3"}
 # bevy_prototype_lyon = {git = "https://github.com/Nilirad/bevy_prototype_lyon", rev = "c596d965f0bc"}
